--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "koa": "^2.5.1",
     "koa-router": "^7.4.0",
+    "moment": "^2.22.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
