--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "moment": "^2.22.2",
+    "socket.io": "^2.1.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
