--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,9 @@
     "socket.io": "^2.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.2",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
