--- a/server/package.json
+++ b/server/package.json
@@ -4,22 +4,23 @@
   "description": "A web-based doom launcher",
   "main": "index.js",
   "scripts": {
-    "serve": "./index.js",
+    "serve": "node-dev ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.5.1",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
+    "express": "^4.17.1",
     "moment": "^2.22.2",
     "socket.io": "^2.1.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "eslint": "^5.0.1",
-    "nodemon": "^1.17.5",
-    "standard": "^11.0.1"
+    "eslint": "^6.1.0",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "node-dev": "^4.0.0",
+    "standard": "^13.1.0"
   }
 }
